--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(day_2 02.cpp)
 add_executable(day_3 03.cpp)
 add_executable(day_4 04.cpp)
 add_executable(day_5 05.cpp)
+add_executable(day_6 06.cpp)
