--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(day_07 07.cpp)
 add_executable(day_08 08.cpp)
 add_executable(day_09 09.cpp)
 add_executable(day_10 10.cpp)
+add_executable(day_11 11.cpp)
