--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_executable(day_09 09.cpp)
 add_executable(day_10 10.cpp)
 add_executable(day_11 11.cpp)
 add_executable(day_12 12.cpp)
+add_executable(day_13 13.cpp)
