--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_executable(day_10 10.cpp)
 add_executable(day_11 11.cpp)
 add_executable(day_12 12.cpp)
 add_executable(day_13 13.cpp)
+add_executable(day_14 14.cpp)
