--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(day_11 11.cpp)
 add_executable(day_12 12.cpp)
 add_executable(day_13 13.cpp)
 add_executable(day_14 14.cpp)
+add_executable(day_15 15.cpp)
