--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_executable(day_12 12.cpp)
 add_executable(day_13 13.cpp)
 add_executable(day_14 14.cpp)
 add_executable(day_15 15.cpp)
+add_executable(day_16 16.cpp)
