--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(day_13 13.cpp)
 add_executable(day_14 14.cpp)
 add_executable(day_15 15.cpp)
 add_executable(day_16 16.cpp)
+add_executable(day_17 17.cpp)
