--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_executable(day_14 14.cpp)
 add_executable(day_15 15.cpp)
 add_executable(day_16 16.cpp)
 add_executable(day_17 17.cpp)
+add_executable(day_21 21.cpp)
