--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_executable(day_15 15.cpp)
 add_executable(day_16 16.cpp)
 add_executable(day_17 17.cpp)
 add_executable(day_21 21.cpp)
+add_executable(day_22 22.cpp)
