--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(day_15 15.cpp)
 add_executable(day_16 16.cpp)
 add_executable(day_17 17.cpp)
 add_executable(day_18 18.cpp)
+add_executable(day_19 19.cpp)
 add_executable(day_21 21.cpp)
 add_executable(day_22 22.cpp)
 add_executable(day_25 25.cpp)
